feat(annotation_processor): 添加模块